changed the title color in index.html file

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-6 col-md-10">
                         <!-- Section Tittle -->
-                        <div class="section-tittle section-tittle2 text-center mb-45">
+                        <div class="section-tittle text-center mb-45">
                             <span>Apply in Three Easy Steps</span>
                             <h2>Easy Application Process For Any Types of Loan</h2>
                         </div>
